--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
   <body>
     <div class="container">
       <header class="header">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="header__icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M3 3v1.5M3 21v-6m0 0 2.77-.693a9 9 0 0 1 6.208.682l.108.054a9 9 0 0 0 6.086.71l3.114-.732a48.524 48.524 0 0 1-.005-10.499l-3.11.732a9 9 0 0 1-6.085-.711l-.108-.054a9 9 0 0 0-6.208-.682L3 4.5M3 15V4.5"
+          />
+        </svg>
+
         <h1 class="header__title">Guess The Flag</h1>
       </header>
-      <main class="main">
+      <main class="main hidden">
         <section class="player player--0 player--active">
           <h2 class="name" id="name--0">Player 1</h2>
           <p class="score" id="score--0">0</p>
@@ -38,6 +53,58 @@
         />
         <button class="btn btn--next hidden">NEXT!</button>
       </main>
+      <div class="form-container">
+        <form class="form">
+          <div class="form--player-names">
+            <div style="display: flex; align-items: center">
+              <label for="player--0-name" class="form__label">Player 1</label>
+              <input
+                type="text"
+                id="player--0-name"
+                placeholder="Enter Player 1 Name"
+                maxlength="14"
+                required
+              />
+            </div>
+            <div style="display: flex; align-items: center">
+              <label for="player--1-name" class="form__label">Player 2</label>
+              <input
+                type="text"
+                id="player--1-name"
+                placeholder="Enter Player 2 Name"
+                maxlength="14"
+                required
+              />
+            </div>
+          </div>
+          <div class="form--radio-buttons">
+            <div style="display: flex; align-items: center">
+              <input
+                type="radio"
+                value="worldwide"
+                id="radio__worldwide"
+                name="user-selection"
+                checked
+              />
+              <label for="countries-selection--worldwide" class="form__label"
+                >Worldwide</label
+              >
+            </div>
+            <div style="display: flex; align-items: center">
+              <input
+                type="radio"
+                value="europe"
+                id="radio__europe"
+                name="user-selection"
+              />
+              <label for="countries-selection--europe" class="form__label"
+                >Europe</label
+              >
+            </div>
+          </div>
+          <button class="btn form__btn" type="submit">Start playing!</button>
+        </form>
+      </div>
       <p class="answer answer--correct hidden">Correct Answer!</p>
       <p class="answer answer--wrong hidden">Wrong Answer!</p>
       <p class="winner hidden">
