flagimg bugs fixed

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
           <h2 class="name" id="name--1">Player 2</h2>
           <p class="score" id="score--1" 43>0</p>
         </section>
-        <img
-          src="https://flagcdn.com/me.svg"
-          alt="Flag"
-          class="flag__img hidden"
-        />
+        <div>
+          <img src="" alt="Flag" class="flag__img hidden" />
+          <p class="img-loading">Image is loading...</p>
+        </div>
         <button class="btn btn--next hidden">NEXT!</button>
       </main>
       <div class="form-container">
