--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
         </section>
         <div>
           <img src="" alt="Flag" class="flag__img hidden" />
-          <p class="img-loading">Image is loading...</p>
+          <div class="spinner">
+            <svg>
+              <use href="icons.svg#icon-loader"></use>
+            </svg>
+          </div>
         </div>
         <button class="btn btn--next hidden">NEXT!</button>
       </main>
